--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
                 <div id="canvas"></div>
             </section>
         </main>
-        <script src="/assets/js/startgame.js"></script>
+        <script type="module" src="/assets/js/boostrap.js"></script>
     </body>
 </html>
