--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Game Snake</title>
-        <link rel="stylesheet" href="/assets/css/style.css">
-        <link rel="icon" href="/assets/img/icone.png" type="image/png">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="icon" href="assets/img/icone.png" type="image/png">
     </head>
     <body>
         <main>
